--- a/content/posts/caloric-restriction-mimetics-2025-review.mdx
+++ b/content/posts/caloric-restriction-mimetics-2025-review.mdx
@@ -4,7 +4,8 @@ slug: "caloric-restriction-mimetics-2025-review"
 date: "2026-02-17"
 excerpt: "A 2025 Biogerontology review maps geroprotective compounds targeting AMPK, mTOR, and autophagy pathways. Most remain at biomarker endpoints; hard longevity data in humans is largely absent."
 metaDescription: "2025 review of caloric restriction mimetics: which compounds target which aging pathways, what evidence exists, and what remains uncertain."
-study_url: "https://link.springer.com/article/10.1007/s10522-025-10269-0"tags:
+study_url: "https://link.springer.com/article/10.1007/s10522-025-10269-0"
+tags:
   - caloric-restriction
   - rapamycin
   - berberine
