--- a/content/posts/dasatinib-quercetin-mayo-clinic-senolytics.mdx
+++ b/content/posts/dasatinib-quercetin-mayo-clinic-senolytics.mdx
@@ -4,7 +4,8 @@ slug: "dasatinib-quercetin-mayo-clinic-senolytics"
 date: "2026-02-18"
 excerpt: "A Mayo Clinic Phase 2 trial tested dasatinib plus quercetin in 60 older women with low bone density, finding improved bone formation markers. Dasatinib is an FDA-approved cancer drug requiring physician supervision."
 metaDescription: "Mayo Clinic Phase 2 trial of dasatinib and quercetin senolytic therapy for bone density in older women: findings, mechanisms, and safety context."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/31686099/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/31686099/"
+tags:
   - senolytics
   - dasatinib
   - quercetin
@@ -57,7 +58,7 @@ Trials have used dasatinib 100 mg + quercetin 1,000 mg for 3 consecutive days pe
 
 ## Related Topics
 
-- [Fisetin and Senolytic Activity](/posts/fisetin-removes-zombie-cells-mayo-clinic)
+- [Fisetin and Senolytic Research](/posts/fisetin-removes-zombie-cells-mayo-clinic)
 - [Quercetin](/supplements/quercetin)
 - [Cognitive Decline Risk](/conditions/cognitive-decline-risk)
 
