--- a/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
+++ b/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
@@ -4,7 +4,8 @@ slug: "epigenetic-reprogramming-eye-disease-trial"
 date: "2026-02-18"
 excerpt: "Life Biosciences received FDA clearance to begin the first human trial of partial epigenetic reprogramming using OSK Yamanaka factors delivered via AAV for glaucoma and NAION. Trial is in early stages; no human efficacy data exists yet."
 metaDescription: "First human trial of partial epigenetic reprogramming (ER-100) cleared to begin: what the technology is, what primate data showed, and why this is frontier science."
-study_url: "https://www.nature.com/articles/s41586-020-2975-4"tags:
+study_url: "https://www.nature.com/articles/s41586-020-2975-4"
+tags:
   - epigenetics
   - reprogramming
   - gene-therapy
