--- a/content/posts/lions-mane-silicon-valley-nootropic.mdx
+++ b/content/posts/lions-mane-silicon-valley-nootropic.mdx
@@ -4,7 +4,8 @@ slug: "lions-mane-silicon-valley-nootropic"
 date: "2026-02-19"
 excerpt: "Lion's Mane mushroom stimulates nerve growth factor production and has shown cognitive benefits in small randomized trials in older adults, with preclinical evidence stronger than human data."
 metaDescription: "Evidence review of Lion's Mane mushroom for cognitive function: NGF mechanisms, human trial findings, dosing context, and key limitations."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/18844328/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/18844328/"
+tags:
   - nootropics
   - brain-health
   - longevity
