--- a/content/posts/nad-boosters-human-trial-comparison.mdx
+++ b/content/posts/nad-boosters-human-trial-comparison.mdx
@@ -4,7 +4,8 @@ slug: "nad-boosters-human-trial-comparison"
 date: "2026-02-18"
 excerpt: "A 2025 Nature Metabolism crossover trial directly compared NMN, NR, and nicotinamide in healthy adults. NMN and NR produced sustained blood NAD+ increases of 130–150%; nicotinamide produced only a transient 4-hour rise. Gut microbiome conversion was a key mechanistic finding."
 metaDescription: "First direct human comparison of NMN, NR, and nicotinamide for NAD+ elevation: Nature Metabolism 2025 crossover trial design, key findings, and limitations."
-study_url: "https://www.nature.com/articles/s42255-025-01421-8"tags:
+study_url: "https://www.nature.com/articles/s42255-025-01421-8"
+tags:
   - nmn
   - nad-plus
   - nr
