--- a/content/posts/osteoarthritis-boswellia-curcumin-ginger-trials.mdx
+++ b/content/posts/osteoarthritis-boswellia-curcumin-ginger-trials.mdx
@@ -49,7 +49,7 @@ A defensible evidence-calibrated frame is:
 - better results when combined with training and weight strategy,
 - ongoing reassessment required.
 
-For background on broader anti-inflammatory stack design, see [The Polyphenol Stack Quietly Winning in Cognition Clinics](/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics).
+For background on broader anti-inflammatory stack design, see [Polyphenol Protocols in Cognition Clinics](/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics).
 
 ## Sources
 
