--- a/content/posts/rapamycin-pearl-trial-women-benefits.mdx
+++ b/content/posts/rapamycin-pearl-trial-women-benefits.mdx
@@ -4,7 +4,8 @@ slug: "rapamycin-pearl-trial-women-benefits"
 date: "2026-02-18"
 excerpt: "The PEARL trial tested low-dose weekly rapamycin in healthy older adults. The primary endpoint — visceral fat reduction — was not met. Secondary analyses suggested lean tissue effects at higher doses in women, but these require confirmation in adequately powered trials."
 metaDescription: "PEARL trial (NCT04488601) rapamycin in healthy older adults: primary endpoint not met for visceral fat, sex differences in secondary body composition outcomes, and immunosuppression risk context."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/40188830/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/40188830/"
+tags:
   - rapamycin
   - mtor
   - longevity
