--- a/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
+++ b/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
@@ -4,7 +4,8 @@ slug: "silicon-valleys-200-month-memory-upgrade"
 date: "2026-02-19"
 excerpt: "Witte et al. (2014) found statistically significant memory improvements in adults 50–75 taking 200 mg/day resveratrol for 26 weeks, alongside improved hippocampal connectivity and glucose metabolism. Sample size was small (n=46) and findings require replication."
 metaDescription: "Resveratrol and memory: Witte 2014 randomized trial in older adults — mechanisms, key findings, and what limitations mean for interpretation."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/25199822/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/25199822/"
+tags:
   - resveratrol
   - cognition
   - memory
