--- a/content/posts/sirt3-activators-breakthrough-aging.mdx
+++ b/content/posts/sirt3-activators-breakthrough-aging.mdx
@@ -4,7 +4,8 @@ slug: "sirt3-activators-breakthrough-aging"
 date: "2026-02-17"
 excerpt: "SIRT3 is a mitochondrial deacetylase linked to energy efficiency and oxidative stress resistance. Novel small-molecule SIRT3 activators are in preclinical development; human efficacy data does not yet exist."
 metaDescription: "SIRT3 activators for aging and neurodegeneration: mechanism, how they differ from NMN/NR, preclinical evidence, and what remains uncertain before human trials."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/34605238/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/34605238/"
+tags:
   - sirt3
   - sirtuins
   - mitochondria
