--- a/content/posts/spermidine-cardiac-disease-trial.mdx
+++ b/content/posts/spermidine-cardiac-disease-trial.mdx
@@ -4,7 +4,8 @@ slug: "spermidine-cardiac-disease-trial"
 date: "2026-02-18"
 excerpt: "The POLYCAD trial is testing 24 mg/day spermidine in 187 older adults with coronary artery disease for 48 weeks. Trial completion is expected August 2026 — no efficacy results exist yet. Prior cohort data from Eisenberg et al. 2016 provides the rationale."
 metaDescription: "POLYCAD trial of spermidine supplementation in coronary artery disease: trial design, prior cohort evidence from Eisenberg 2016 Nature Medicine, and why results are not yet available."
-study_url: "https://link.springer.com/article/10.1186/s13063-025-09176-z"tags:
+study_url: "https://link.springer.com/article/10.1186/s13063-025-09176-z"
+tags:
   - spermidine
   - autophagy
   - cardiovascular
