--- a/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
+++ b/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
@@ -4,7 +4,8 @@ slug: "the-nad-plus-uptick-that-cut-afternoon-brain-fog"
 date: "2026-02-17"
 excerpt: "NAD+ precursors reliably elevate blood NAD+ in humans and activate mitochondrial energy pathways. Whether this translates to clinically meaningful reductions in cognitive fatigue requires larger, longer trials."
 metaDescription: "NAD+ precursors and cognitive fatigue: mechanisms, what human supplementation trials show, and why blood NAD+ elevation does not yet confirm cognitive benefit."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/31685720/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/31685720/"
+tags:
   - nmn
   - nad-plus
   - cognition
