--- a/content/posts/vitamin-d-telomere-protection-vital.mdx
+++ b/content/posts/vitamin-d-telomere-protection-vital.mdx
@@ -4,7 +4,8 @@ slug: "vitamin-d-telomere-protection-vital"
 date: "2026-02-18"
 excerpt: "A VITAL sub-study (n=1,054, 4 years, 2,000 IU/day vitamin D3) found reduced leukocyte telomere attrition in the vitamin D group versus placebo. Omega-3 showed no significant effect. Telomere length is a surrogate marker; clinical outcome implications are uncertain."
 metaDescription: "VITAL trial vitamin D3 and telomere attrition: sub-study findings, effect size context, what the omega-3 null result means, and why surrogate endpoints require cautious interpretation."
-study_url: "https://www.sciencedirect.com/science/article/abs/pii/S0002916525002552"tags:
+study_url: "https://www.sciencedirect.com/science/article/abs/pii/S0002916525002552"
+tags:
   - vitamin-d
   - telomeres
   - longevity
