--- a/content/posts/magnesium-threonate-brain-health.mdx
+++ b/content/posts/magnesium-threonate-brain-health.mdx
@@ -4,7 +4,8 @@ slug: "magnesium-threonate-brain-health"
 date: "2026-02-03"
 excerpt: "Magnesium L-threonate was developed to improve brain magnesium delivery. Human trials show modest cognitive improvements in older adults, though sample sizes are small and independent replication is limited."
 metaDescription: "Clinical evidence review of magnesium L-threonate for cognitive function: mechanisms, human trial findings, dosing protocol, and key limitations."
-study_url: "https://pubmed.ncbi.nlm.nih.gov/39252819/"tags:
+study_url: "https://pubmed.ncbi.nlm.nih.gov/39252819/"
+tags:
   - magnesium
   - brain-health
   - cognition
